samples/_failures_safe/1761693661_87d9a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_325782d0.c: In function ‘main’:
./samples/SAFE/__tmp_325782d0.c:127:5: error: expected expression at end of input
  127 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_325782d0.c:127:5: error: expected declaration or statement at end of input
